update font size

--- a/max_discharge_culvert.ipynb
+++ b/max_discharge_culvert.ipynb
@@ -33,15 +33,15 @@
   },
   {
    "source": [
-    "#### Governing Equations (SI):\n",
+    "## Governing Equations (SI):\n",
     "\n",
-    "### $Q = \\frac{1}{n}AR^{2/3}S^{1/2}  $\n",
+    "## $Q = \\frac{1}{n}AR^{2/3}S^{1/2}  $\n",
     "\n",
-    "### $R = \\frac{A}{P} $\n",
+    "## $R = \\frac{A}{P} $\n",
     "\n",
-    "### $A = \\frac{r^2}{2}(\\theta-\\sin\\theta) $\n",
+    "## $A = \\frac{r^2}{2}(\\theta-\\sin\\theta) $\n",
     "\n",
-    "### $P = r\\theta $\n"
+    "## $P = r\\theta $\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -49,12 +49,12 @@
   {
    "source": [
     "#### where,\n",
-    "### $R$ = hydraulic radius (m)\n",
-    "### $Q$ = volumetric flow rate (cms)\n",
-    "### $A$ = cross-sectional area (sq-m)\n",
-    "### $P$ = wetted perimeter (m)\n",
-    "### $\\theta$ = angle (rad)\n",
-    "### $r$ = radius of culvert (m)\n"
+    "#### R = hydraulic radius (m)\n",
+    "#### Q = volumetric flow rate (cms)\n",
+    "#### A = cross-sectional area (sq-m)\n",
+    "#### P = wetted perimeter (m)\n",
+    "#### $\\theta$ = angle (rad)\n",
+    "#### r = radius of culvert (m)\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
