--- a/COLAB/GPP_Example.ipynb
+++ b/COLAB/GPP_Example.ipynb
@@ -96,16 +96,7 @@
             "Requirement already satisfied: pyparsing>=2.0.2 in /usr/local/lib/python3.7/dist-packages (from packaging>=14.3->google-api-core<2dev,>=1.21.0->google-api-python-client<2,>=1.12.1->earthengine-api) (2.4.7)\n",
             "WARNING:tensorflow:From /usr/local/lib/python3.7/dist-packages/tensorflow/python/compat/v2_compat.py:96: disable_resource_variables (from tensorflow.python.ops.variable_scope) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
-            "non-resource variables are not supported in the long term\n",
-            "To authorize access needed by Earth Engine, open the following URL in a web browser and follow the instructions. If the web browser does not start automatically, please manually browse the URL below.\n",
-            "\n",
-            "    https://accounts.google.com/o/oauth2/auth?client_id=517222506229-vsmmajv00ul0bs7p89v5m89qs8eb9359.apps.googleusercontent.com&scope=https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fearthengine+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdevstorage.full_control&redirect_uri=urn%3Aietf%3Awg%3Aoauth%3A2.0%3Aoob&response_type=code&code_challenge=jHdmbTj8G7I68xxvtoN857Uh69zfr_O9ThtaS9EnW6Y&code_challenge_method=S256\n",
-            "\n",
-            "The authorization workflow will generate a code, which you should paste in the box below. \n",
-            "Enter verification code: 4/1AY0e-g6yovH7lvR5ajGB0wdSIxgmBGQb_k_0tKZQd8j2oHOUj0d2kTmg2Nc\n",
-            "\n",
-            "Successfully saved authorization token.\n",
-            "Mounted at /content/drive\n"
+            "non-resource variables are not supported in the long term\n"
           ],
           "name": "stdout"
         }
