Update news article

--- a/COLAB/GEE_TSARS_example.ipynb
+++ b/COLAB/GEE_TSARS_example.ipynb
@@ -5050,7 +5050,7 @@
       "metadata": {
         "id": "puII-PYx19Ip"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5071,7 +5071,7 @@
       "metadata": {
         "id": "RqsxP0Dko-DK"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5262,7 +5262,7 @@
         "id": "uTqNlBp127Ce",
         "outputId": "6d21a77d-bd22-46e2-b204-fcfdaf7448e1"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5345,7 +5345,7 @@
       "metadata": {
         "id": "js_38yC5SnuJ"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5409,7 +5409,7 @@
         "id": "r9afV9MM6AEz",
         "outputId": "18271eeb-18cb-46b2-f993-50c82fd36275"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5442,7 +5442,7 @@
         "id": "_yw4FKBG2oea",
         "outputId": "4c57af61-ad9d-47e0-fe31-4aeb19a14f3b"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5751,7 +5751,7 @@
         "id": "nkb-e5mD5hc7",
         "outputId": "4b16b048-561a-4d41-b966-6989227299ea"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5770,7 +5770,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### This is interesting in that it shows obviously less NO2 for 2020, but there is a disconnect between the Inland Empire and Downtown showing that people are commuting a lot less. Additionally, this east-to-west connection seems to grow higher in 2021 and 2022  (even higher than 2019).."
+        "### This is interesting in that it shows obviously less NO2 for 2020, but there is a disconnect between the Inland Empire and Downtown showing that people are commuting a lot less. Additionally, this east-to-west connection seems to grow higher in 2021 and 2022  (even higher than 2019).. This is quite possibly due to lower ridership in post-covid for fear of crowds and illness: https://www.latimes.com/opinion/story/2021-04-07/los-angeles-public-transit-crisis"
       ],
       "metadata": {
         "id": "ZkSZ483y_Wbu"
@@ -5810,7 +5810,7 @@
         "id": "Y0BJVg9dgD8X",
         "outputId": "63af8ab8-a83d-422a-e5d6-2bd35c501ced"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
